fixed sidebar overflow

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -6,13 +6,14 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x: hidden;
   }
 
   *, *::before, *::after {
     box-sizing: border-box;
     overflow-x: hidden;
+    overflow-y: hidden;
     
   }
   
